Version 3.8.7
- Improved constant propagation for REP instructions
- Fixed addresses for listing in P1 mode
- Fixed an optimization problem where hw registers could be used
  to hold intermediate values in a calculation
- Fixed relocations for @@@ calculations

Version 3.8.6
- Added P2 optimization to use REP instruction when possible
- Fixed ##label arguments to rdbyte/wrlong/etc.
- Fixed a bug where aliases like neg a -> neg a,a could generate
  incorrect code
- Fixed CSE where hardware registers are set so that they do not
  invalidate all entries
- Made some improvements to listing files

Version 3.8.5
- Improve inline assembly: allow labels
- Fix string constants in case labels (they should be treated as
  lists)
- Big revision of how listing files are created. This is worse for all
  assembly files (DAT section output is a bit weaker) but much better
  for regular Spin files, which can now have listing files.
- Fixed coginit of Spin methods in P2
- Add a check for recursive symbol definition

Version 3.8.4
- Automatically promote literal strings to string("foo") if they are
  being passed to a function that expects a pointer
- Fixed lockset() on P2 (C flag behavior differs between P1 and P2)
- Changed default hub start for P2 from $800 to $400
- Provide some inline assembly support for C/C++

Version 3.8.3
- Allow multiple return values to in turn be passed to functions as
  parameters
- Allow default values for parameters. So far these must be constant
- added Spin2 <=>, \, and XOR operators
- Fixed a CSE bug with loops containing multiple assignments

Version 3.8.2
- Added warning for instructions that should set C or Z flags not
  doing so

Version 3.8.1
- Added -l flag to fastspin to produce a listing file
- Fixed multiple returns from functions with no parameters
- Added pusha, pushb, modc, modz aliases for P2 instructions
- Various fixes for P2 binary output

Version 3.8.0
- Added multiple assignments like (x,y) := (y,x)